# second-brain

./: .gitignore  README.md  capstone_assessment.html  capstone_assessment.json  pyproject.toml
src/second_brain/: __init__.py  main.py
src/second_brain/agents/: ingestor.py  memory_manager.py  thought_agent.py
src/second_brain/eval/: __init__.py  agent_dataset.py  pydantic_eval_compat.py  retrieval_dataset.py  run_eval.py
src/second_brain/memory/: memory_data.json
src/second_brain/utils/: __init__.py  guardrails.py  otel_setup.py
