[project]
name = "second-brain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.0",
    "langchain>=1.0.3",
    "langchain-text-splitters>=1.0.0",
    "openai>=2.6.1",
    "pydantic>=2.12.3",
    "sentence-transformers>=5.1.2",
]

[project.scripts]
second-brain = "second_brain.main:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
